# mastering-software-engineering

./: README.md
ai/langc-course/: document_loaders.py  main.py  pyproject.toml
docker-k8s/redis-image/: Dockerfile
docker-k8s/simpleweb/: Dockerfile  index.js  package.json  pnpm-lock.yaml
final450/: .~lock.FINAL450.xlsx#  FINAL450.xlsx
final450/array/kth-smallest/: go.mod  main.go
final450/array/largest-sum-contigious-subarray/: main.go
final450/array/minimum-and-maximum/: go.mod  main.go  main_test.go
final450/array/move-negative-numbers-one-side/: main.go
final450/array/reverse-array/: go.mod  main.go  (+1 more)
final450/retry/: go.mod  main.go
final450/union-intersection/: main.go
frontend/modal-project/: package-lock.json
frontend/tailwind-notes/: flex-notes.html  grid-any-layout.html
frontend/todolist/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/vue-crash-2026/: README.md  package-lock.json  package.json  vite.config.js
frontend/vue-firebase/: app.js  index.html
frontend/vue3-tutorial/: index.html  package.json
fullstack/todolist/: index.html  vite.config.ts
golang/: go.mod
golang/concurrent-map/: go.mod  main.go
prompt_engineering/: output.json  output.md  reasoning.md
prompt_engineering/.results/: 01-assumptions.md  02-risks.md
prompt_engineering/prompt-chain/: 1-assumptions.md  2-security.md  3-requirenments.md
smolagents/: Untitled.ipynb  Untitled1.ipynb  main.py  manager.py  multiagent.py  quiz.2.4.py  quiz.2.5.py  quiz2.1.py  quiz2.2.py  quiz2.3.py  rag.py  tool_calling_agent.py  ttt  vlm.py
(+30 files in other folders)
